<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/foteImageView"
        android:layout_width="500dp"
        android:layout_height="152dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:contentDescription="@null"
        app:srcCompat="@drawable/foten"
        tools:layout_editor_absoluteX="5dp"
        tools:layout_editor_absoluteY="0dp" />

    <EditText
        android:id="@+id/nameEditText"
        android:layout_width="299dp"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="175dp"
        android:ems="10"
        android:hint="@string/your_nmae"
        android:inputType="textPersonName"
        android:text="@string/name"
        tools:layout_editor_absoluteX="5dp"
        tools:layout_editor_absoluteY="160dp" />

    <EditText
        android:id="@+id/surnameEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="247dp"
        android:ems="10"
        android:hint="@string/your_surname"
        android:inputType="textPersonName"
        android:text="@string/surname"
        tools:layout_editor_absoluteX="5dp"
        tools:layout_editor_absoluteY="219dp" />

    <TextView
        android:id="@+id/genderTextView"
        android:layout_width="62dp"
        android:layout_height="30dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/genderSpinner"
        android:layout_marginTop="-247dp"
        android:text="@string/gender"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="14sp"
        android:textStyle="bold"
        tools:layout_editor_absoluteX="5dp"
        tools:layout_editor_absoluteY="281dp" />

    <Spinner
        android:id="@+id/genderSpinner"
        android:layout_width="92dp"
        android:layout_height="49dp"
        android:layout_alignEnd="@+id/surnameEditText"
        android:layout_alignParentBottom="true"
        android:layout_alignRight="@+id/surnameEditText"
        android:layout_marginBottom="203dp"
        tools:layout_editor_absoluteX="85dp"
        tools:layout_editor_absoluteY="281dp" />

    <TextView
        android:id="@+id/tshirtsizeTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="135dp"
        android:text="@string/t_shirt_size"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="14sp"
        android:textStyle="bold"
        tools:layout_editor_absoluteX="5dp"
        tools:layout_editor_absoluteY="347dp" />

    <Spinner
        android:id="@+id/tshirtsizeSpinner"
        android:layout_width="103dp"
        android:layout_height="54dp"
        android:layout_alignLeft="@+id/genderSpinner"
        android:layout_alignParentBottom="true"
        android:layout_alignStart="@+id/genderSpinner"
        android:layout_marginBottom="122dp"
        tools:layout_editor_absoluteX="92dp"
        tools:layout_editor_absoluteY="347dp" />

    <Button
        android:id="@+id/registerButton"
        android:layout_width="149dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="48dp"
        android:background="#e462f6"
        android:text="@string/register"
        android:textStyle="bold|italic"
        tools:layout_editor_absoluteX="118dp"
        tools:layout_editor_absoluteY="400dp" />

</RelativeLayout>